add_subdirectory( test.component.be.file.threading )
add_subdirectory( test.component.core.getProcessIdentity )
add_subdirectory( test.component.core.initialisation_sequence )
add_subdirectory( test.component.core.pantheios_logprintf )
add_subdirectory( test.component.core.pantheios_logputs )
add_subdirectory( test.component.custom_severity )
add_subdirectory( test.component.inserters.args )
add_subdirectory( test.component.inserters.b64 )
add_subdirectory( test.component.inserters.boolean )
add_subdirectory( test.component.inserters.hostId )
add_subdirectory( test.component.inserters.integer )
add_subdirectory( test.component.inserters.m2w )
add_subdirectory( test.component.inserters.pad )
add_subdirectory( test.component.inserters.pointer )
add_subdirectory( test.component.inserters.processId )
add_subdirectory( test.component.inserters.real )
add_subdirectory( test.component.inserters.slice )
add_subdirectory( test.component.inserters.stream_character )
add_subdirectory( test.component.inserters.threadId )
add_subdirectory( test.component.inserters.variant_bool )
add_subdirectory( test.component.inserters.w2m )
add_subdirectory( test.component.log.1 )
add_subdirectory( test.component.trace.1 )
