add_subdirectory( test.scratch.api )
add_subdirectory( test.scratch.bec.WindowsConsoleCallback )
add_subdirectory( test.scratch.bec.WindowsMessageBox )
add_subdirectory( test.scratch.be.file )
add_subdirectory( test.scratch.be.file.rolling )
add_subdirectory( test.scratch.be.N )
add_subdirectory( test.scratch.be.N.fail )
add_subdirectory( test.scratch.be.N.with.custom.fe )
add_subdirectory( test.scratch.be.pantheios.COM )
add_subdirectory( test.scratch.be.speech )
add_subdirectory( test.scratch.be.syslog )
add_subdirectory( test.scratch.be.syslog.WithCallback )
add_subdirectory( test.scratch.be.WindowsSyslog )
add_subdirectory( test.scratch.be.WindowsSyslog.WithCallback )
add_subdirectory( test.scratch.be.zmq )
add_subdirectory( test.scratch.be.zmq.WithCallback )
add_subdirectory( test.scratch.c_api )
add_subdirectory( test.scratch.extras.com_exception_helpers )
add_subdirectory( test.scratch.extras.com.invoke_nothrow_method )
add_subdirectory( test.scratch.fe )
add_subdirectory( test.scratch.fe.simple.WithCallback )
add_subdirectory( test.scratch.fe.WindowsRegistry )
add_subdirectory( test.scratch.fe.WindowsRegistry.controller )
add_subdirectory( test.scratch.I18N )
add_subdirectory( test.scratch.implicit_link )
add_subdirectory( test.scratch.pseudoUNIX )
add_subdirectory( test.scratch.showPlus.integer )
add_subdirectory( test.scratch.trace )
add_subdirectory( test.scratch.tstring )
add_subdirectory( test.scratch.util.onbailout )
add_subdirectory( test.scratch.WideString )
