add_subdirectory( inserters )
add_subdirectory( test.unit.bec.COMErrorObject )
add_subdirectory( test.unit.bec.fail )
add_subdirectory( test.unit.bec.file )
add_subdirectory( test.unit.bec.fprintf )
add_subdirectory( test.unit.be.fail )
add_subdirectory( test.unit.be.lrsplit )
add_subdirectory( test.unit.be.N )
add_subdirectory( test.unit.be.WindowsSyslog )
add_subdirectory( test.unit.fe.all )
add_subdirectory( test.unit.fe.fail )
add_subdirectory( test.unit.fe.N )
add_subdirectory( test.unit.fe.null )
add_subdirectory( test.unit.fe.simple )
add_subdirectory( test.unit.fe.WindowsRegistry )
add_subdirectory( test.unit.getversion )
add_subdirectory( test.unit.inserters.windows.sc )
# add_subdirectory( test.unit.levels.2 ) Nothing here at the moment
add_subdirectory( test.unit.levels.dynamic_initialisation )
add_subdirectory( test.unit.levels.values )
add_subdirectory( test.unit.util.getcurrenttime )
add_subdirectory( test.unit.util.gethostname )
add_subdirectory( test.unit.util.onbailout )
add_subdirectory( test.unit.util.strnlen )
