add_subdirectory( example.cpp.inserter.xp )
add_subdirectory( example.cpp.inserter.integer )
add_subdirectory( example.cpp.inserter.blob )
add_subdirectory( example.cpp.inserter.hex_ptr )
add_subdirectory( example.cpp.inserter.p )
add_subdirectory( example.cpp.inserter.processid )
add_subdirectory( example.cpp.inserter.w2m )
add_subdirectory( example.cpp.inserter.real )
add_subdirectory( example.cpp.inserter.hostid )
add_subdirectory( example.cpp.inserter.i )
add_subdirectory( example.cpp.inserter.pointer )
add_subdirectory( example.cpp.inserter.threadid )
add_subdirectory( example.cpp.inserter.m2w )
add_subdirectory( example.cpp.inserter.b )
add_subdirectory( example.cpp.inserter.b64 )
add_subdirectory( example.cpp.inserter.character )
add_subdirectory( example.cpp.inserter.args )
add_subdirectory( example.cpp.inserter.xi )
